# job_search_lib

./: Cargo.toml  README.md  clippy.toml
experimental/: companies.sql  just_in_case.sql  test.db  testing.sql
src/: company.rs  contact_type.rs  errors.rs  interview_type.rs  job_posting.rs  lib.rs  models.rs  utils.rs
