[package]
name = "job_search"
version = "0.1.0"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
url = "2.1.1"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled", "chrono", "url"]
